--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-constants": "~14.0.2",
+    "expo-application": "~5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
